[package]
name = "mintlayer-core"
description = "Bitcoin bridging blockchain node"
homepage = "https://mintlayer.org"
repository = "https://github.com/mintlayer/mintlayer-core"
readme = "README.md"
license = "MIT"
version = "0.2.0"
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]
edition = "2021"

[workspace]
members = [
  "storage",                            # storage abstraction layer and its implementation.
  "storage/backend-test-suite",         # Tests for validating storage backend implementations.
  "storage/core",                       # Core backend-agnostic storage abstraction.
  "storage/inmemory",                   # In-memory storage backend implementation.
  "storage/lmdb",                       # LMDB-based persistent storage backend implementation.
  "storage/sqlite",                     # SQLite-based persistent storage backend implementation.
]

default-members = [
  "storage",
]

[dependencies]
# common = { path = "common"}
crypto = { path = "crypto"}
logging = { path = "logging"}
serialization = { path = "serialization"}
storage = { path = "storage"}

[workspace.package]
edition = "2021"
rust-version = "1.74"
version = "0.2.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
arraytools = "0.1"
assert_cmd = "2"
async-trait = "0.1"
atomic-traits = "0.3"
axum = "0.6"
base64 = "0.21"
bech32 = "0.9"
bip39 = { version = "2.0", default-features = false }
bitcoin-bech32 = "0.13"
blake2 = "0.10"
bytes = "1.1"
cfg-if = "1.0"
chacha20poly1305 = "0.10"
chrono = "0.4"
clap = "4"
ctor = "0.2"
criterion = "0.5"
crossterm = "0.27"
derive_more = "0.99"
directories = "5.0"
dyn-clone = "1.0"
enum-iterator = "1.4"
expect-test = "1.3"
fallible-iterator = "0.3"
fixed-hash = "0.8"
flate2 = "1.0"
fs4 = "0.7"
futures = { version = "0.3", default-features = false }
generic-array = "0.14"
hex = "0.4"
hex-literal = "0.4"
hmac = "0.12"
http = "0.2"
hyper = "0.14"
iced = "0.10"
iced_aw = "0.7"
itertools = "0.12"
jsonrpsee = { version = "0.20", default-features = false }
lazy_static = "1.4"
libtest-mimic = "0.6"
log = "0.4"
loom = "0.7"
mockall = "0.11"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
once_cell = "1.13"
oneshot = "0.1"
parity-scale-codec = "3.1"
parking_lot = "0.12"
paste = "1.0"
portpicker = "0.1"
probabilistic-collections = "0.7"
proptest = "1.0"
qrcodegen = "1.8"
quote = "1.0"
rand = "0.8"
rand_chacha = "0.3"
reedline = "0.26"
ref-cast = "1.0"
replace_with = "0.1"
rfd = { version = "0.12", default-features = false }
ripemd = "0.1"
rlimit = "0.10"
rstest = "0.18"
rusqlite = "0.30"
schnorrkel = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_test = "1.0"
serial_test = "2.0"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
shlex = "1.0"
siphasher = "1.0"
slave-pool = "0.2"
snowstorm = "0.4"
socket2 = "0.5"
sscanf = "0.4"
static_assertions = "1.1"
syn = "2.0"
tap = "1.0"
tempfile = "3.3"
testing_logger = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tokio = { version = "1.27", default-features = false }
tokio-socks = "0.5"
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false }
toml = "0.8"
tower = "0.4"
tower-http = "0.4"
trust-dns-client = "0.23"
trust-dns-server = "0.23"
variant_count = "1.1"
zeroize = "1.5"

[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)
debug-assertions = true
overflow-checks = true

[profile.test]
debug-assertions = true
overflow-checks = true

[profile.test.package.script]
opt-level = 2
