[package]
name = "mintlayer-core"
description = "Bitcoin bridging blockchain node"
homepage = "https://mintlayer.org"
repository = "https://github.com/mintlayer/mintlayer-core"
readme = "README.md"
license = "MIT"
version = "0.2.0"
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]
edition = "2021"

[workspace]
members = [
  "storage",                            # storage abstraction layer and its implementation.
  "storage/backend-test-suite",         # Tests for validating storage backend implementations.
  "storage/core",                       # Core backend-agnostic storage abstraction.
  "storage/inmemory",                   # In-memory storage backend implementation.
  "storage/lmdb",                       # LMDB-based persistent storage backend implementation.
  "storage/sqlite",                     # SQLite-based persistent storage backend implementation.
]

default-members = [
  "storage",
]

[dependencies]
# common = { path = "common"}
crypto = { path = "crypto"}
logging = { path = "logging"}
serialization = { path = "serialization"}
storage = { path = "storage"}

[workspace.package]
edition = "2021"
rust-version = "1.74"
version = "0.2.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
arraytools = "0.1"
bip39 = { version = "2.0", default-features = false }
bitcoin-bech32 = "0.13"
blake2 = "0.10"
chacha20poly1305 = "0.10"
criterion = "0.5"
directories = "5.0"
generic-array = "0.14"
hex = "0.4"
hex-literal = "0.4"
hmac = "0.12"
itertools = "0.12"
libtest-mimic = "0.6"
log = "0.4"
loom = "0.7"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
parity-scale-codec = "3.1"
probabilistic-collections = "0.7"
proptest = "1.0"
qrcodegen = "1.8"
rand = "0.8"
rand_chacha = "0.3"
ripemd = "0.1"
rstest = "0.18"
rusqlite = "0.30"
schnorrkel = "0.11"
serde = "1.0"
serde_json = "1.0"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
slave-pool = "0.2"
static_assertions = "1.1"
tempfile = "3.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tokio = { version = "1.27", default-features = false }
zeroize = "1.5"

[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)
debug-assertions = true
overflow-checks = true

[profile.test]
debug-assertions = true
overflow-checks = true

[profile.test.package.script]
opt-level = 2
