[package]
name = "mintlayer-core"
description = "Bitcoin bridging blockchain node"
homepage = "https://mintlayer.org"
repository = "https://github.com/mintlayer/mintlayer-core"
readme = "README.md"
license = "MIT"
version = "0.2.0"
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]
edition = "2021"

[workspace]
members = [
  "storage",                            # storage abstraction layer and its implementation.
  "storage/backend-test-suite",         # Tests for validating storage backend implementations.
  "storage/core",                       # Core backend-agnostic storage abstraction.
  "storage/inmemory",                   # In-memory storage backend implementation.
  "storage/lmdb",                       # LMDB-based persistent storage backend implementation.
  "storage/sqlite",                     # SQLite-based persistent storage backend implementation.
]

default-members = [
  "storage",
]

[dependencies]
crypto = { path = "crypto"}
serialization = { path = "serialization"}
storage = { path = "storage"}

[workspace.package]
edition = "2021"
rust-version = "1.74"
version = "0.2.0"
license = "MIT"

[workspace.dependencies]
arraytools = "0.1"
hex = "0.4"
hex-literal = "0.4"
itertools = "0.12"
libtest-mimic = "0.6"
loom = "0.7"
parity-scale-codec = "3.1"
proptest = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rstest = "0.18"
rusqlite = "0.30"
static_assertions = "1.1"
tempfile = "3.3"
thiserror = "1.0"


[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)
debug-assertions = true
overflow-checks = true

[profile.test]
debug-assertions = true
overflow-checks = true

[profile.test.package.script]
opt-level = 2
