[package]
name = "crypto"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }

rand_chacha.workspace = true
