[package]
name = "serialization"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serialization-core = { path = 'core' }

hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
