[package]
name = "test-utils"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = {path = '../crypto'}
serialization = { path = '../serialization' }

hex.workspace = true
itertools.workspace = true
rand_chacha.workspace = true
rstest.workspace = true
